Colaboratory를 통해 생성됨

--- a/playstore_review_scrap.ipynb
+++ b/playstore_review_scrap.ipynb
@@ -6,7 +6,7 @@
       "name": "playstore_review_scrap.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOzoEGJa5wUzAgoRVl5wl2r",
+      "authorship_tag": "ABX9TyMvFP7KkpQnPsqj9+x83bwv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,26 @@
       },
       "outputs": [],
       "source": [
+        "pip install google_play_scraper\n",
+        "pip install konlpy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "# for scraping app info and reviews from Google Play\n",
         "from google_play_scraper import app, Sort, reviews_all\n",
-        "from collections import Counter"
-      ]
+        "\n",
+        "from konlpy.tag import Okt\n",
+        "from collections import defaultdict"
+      ],
+      "metadata": {
+        "id": "nghmG4AXjCQ3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -55,6 +69,27 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "C5iYG9-Sznk4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Scrap google_playstore_review"
+      ],
+      "metadata": {
+        "id": "w5DoKFHHjMZ3"
+      }
     },
     {
       "cell_type": "code",
@@ -97,7 +132,8 @@
         "# want to show 5 years\n",
         "result_all['년도'] = result_all['작성일자'].apply(lambda x: x.year)\n",
         "result_all = result_all[result_all['년도'] > 2017]\n",
-        "result_all = result_all.astype({'평점' : 'int', '공감수' : 'int'})"
+        "result_all = result_all.astype({'평점' : 'int', '공감수' : 'int'})\n",
+        "result_all.to_csv(\"/content/drive/MyDrive/리뷰분석/리뷰원본_빈도수정.csv\", index = False)"
       ],
       "metadata": {
         "id": "Lw_zHEkw6dWz"
@@ -106,43 +142,41 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# Extract nouns by year"
       ],
       "metadata": {
-        "id": "XTacV_uOdguH"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "MfOEwn_DjTeq"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "from konlpy.tag import Okt\n",
-        "from collections import defaultdict\n",
-        "\n",
         "okt = Okt()\n",
         "# ranks.nl -> korean stopword\n",
         "s = pd.read_csv(\"/content/drive/MyDrive/리뷰분석/불용어사전.csv\")\n",
         "\n",
         "stop_words = set(str(s.columns).split())\n",
         "# {year1 : [word1, ...]}\n",
-        "li_nouns = defaultdict(list)\n",
+        "li_nouns = defaultdict(lambda : defaultdict(int))\n",
         "\n",
         "for i in range(len(result_all)):\n",
         "    review = result_all.iloc[i, 0]\n",
         "    year = result_all.iloc[i, 4]\n",
         "    # normalize\n",
         "    review_normalized = okt.normalize(review)\n",
-        "    line_nouns = okt.nouns(review_normalized)\n",
-        "    li_nouns[year] += [noun for noun in line_nouns if len(noun) > 1 and noun not in stop_words]\n",
+        "\n",
+        "    # one row -> don't consider frequency of word\n",
+        "    line_nouns = set(okt.nouns(review_normalized))\n",
+        "    for n in line_nouns:\n",
+        "        if len(n) > 1 and n not in stop_words:\n",
+        "            li_nouns[year][n] += 1\n",
         "\n",
         "count_nouns = []\n",
         "for y in range(2018, 2023):\n",
         "    # counter -> {word1 : freq1, ...}\n",
-        "    counter = dict(Counter(li_nouns[y]))\n",
+        "    counter = li_nouns[y]\n",
         "    # count_nouns -> [(word1, freq1, year1), ...]\n",
         "    count_nouns += list(zip(list(counter.keys()), list(counter.values()), [y] * len(counter)))\n",
         "\n",
@@ -157,6 +191,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### reference : https://github.com/JoMingyu/google-play-scraper"
+      ],
+      "metadata": {
+        "id": "RHq5yscpj_KE"
+      }
     }
   ]
 }
